# Test-CMake

./: .gitignore  CMakeLists.txt  Helper.cmake  README.md
Lib/: CMakeLists.txt
Lib/include/: Lib_export.h  hello.h
Lib/src/: hello.cc
Lib/test/: test_hello.cc
Main/: CMakeLists.txt
Main/include/: unit.h
Main/src/: main.cc  unit1.cc  unit2.cc
Main/test/: test_unit1.cc  test_unit2.cc
